@@ -1,4 +1,4 @@
-if COND_FISH
+if FISH
   MAYBE_FISH = fish
 endif
 
@@ -6,12 +6,12 @@ SUBDIRS = doc libfreeipmi bmc-watchdog ipmipower ipmi-raw ipmiping rmcpping garp
 
 PACKAGE = @PACKAGE@
 VERSION = @VERSION@
- 
+
 EXTRA = ChangeLog AUTHORS COPYING INSTALL NEWS README TODO THANKS COPYING.bmc-watchdog DISCLAIMER.bmc-watchdog COPYING.ipmipower DISCLAIMER.ipmipower COPYING.ipmiping DISCLAIMER.ipmiping COPYING.rmcpping DISCLAIMER.rmcpping
- 
+
 docdir   = $(datadir)/doc/$(PACKAGE)
 doc_DATA = $(EXTRA)
- 
+
 CLEANFILES =
 DISTCLEANFILES = .deps/*.P
 
