@@ -30,9 +30,10 @@ ipmi_locate (ipmi_interface_type_t type, ipmi_locate_info_t* pinfo)
   
   static ipmi_locate_func things_to_try[] =
     {
-      pci_get_dev_info,
-      acpi_spmi_get_dev_info,
       smbios_get_dev_info,
+      acpi_spmi_get_dev_info,
+      pci_get_dev_info,
+      defaults_get_dev_info,
       NULL
     };
 
@@ -49,25 +50,6 @@ ipmi_locate (ipmi_interface_type_t type, ipmi_locate_info_t* pinfo)
 	return (pinfo2);
     }
 
-  switch (type){
-  case IPMI_INTERFACE_KCS:
-    pinfo->interface_type = IPMI_INTERFACE_KCS;
-    pinfo->addr_space_id = IPMI_ADDRESS_SPACE_ID_SYSTEM_IO;
-    pinfo->base_addr.bmc_iobase_addr = IPMI_KCS_SMS_IO_BASE_DEFAULT;
-    return (pinfo);
-  case IPMI_INTERFACE_SMIC:
-    pinfo->interface_type = IPMI_INTERFACE_SMIC;
-    pinfo->addr_space_id = IPMI_ADDRESS_SPACE_ID_SYSTEM_IO;
-    pinfo->base_addr.bmc_iobase_addr = IPMI_SMIC_SMS_IO_BASE_DEFAULT;
-    return (pinfo);
-  case IPMI_INTERFACE_SSIF:
-    pinfo->interface_type = IPMI_INTERFACE_SSIF;
-    pinfo->addr_space_id = IPMI_ADDRESS_SPACE_ID_SMBUS;
-    pinfo->base_addr.bmc_smbus_slave_addr = IPMI_SSIF_SMBUS_SLAVE_ADDR;
-    return (pinfo);
-  case IPMI_INTERFACE_BT:
-  default:
-    return (NULL);
-  }
+  pinfo->locate_driver_type = IPMI_LOCATE_DRIVER_NONE;
   return (NULL);
 }
