@@ -183,6 +183,7 @@ pci_get_dev_info (ipmi_interface_t type, ipmi_locate_info_t* pinfo)
 ipmi_locate_info_t*
 pci_get_dev_info (ipmi_interface_type_t type, ipmi_locate_info_t* pinfo)
 {
+  pinfo->locate_driver_type = IPMI_LOCATE_DRIVER_PCI;
   return NULL;
 }
 
